<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/l1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/yellow"
            android:layout_marginTop="10dp"
            android:textSize="35sp"
            android:text="@string/Titre"
            android:paddingBottom="10dp"/>

    </LinearLayout>
    <LinearLayout

        android:layout_below="@+id/l1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">


        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="15"
            android:layout_marginTop="150dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="15"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="true" />

        <Button
            android:id="@+id/btn_Inscription"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:layout_marginTop="90dp"
            android:textSize="20sp"
            android:enabled="false"/>
        <TextView
            android:id="@+id/alreadyAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/alreadyAcc"
            android:clickable="true"
            android:paddingBottom="10dp"/>

    </LinearLayout>
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Hello World!"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</RelativeLayout>